# remarkable-to-markdown

./: .gitignore  README.md  install.sh  pyproject.toml
.github/skills/ocr-pdf-pipeline/: SKILL.md
.github/skills/remarkable-to-markdown/: SKILL.md
.github/workflows/: release.yml
src/mistral_ocr/: cli.py
src/rm2md/: __init__.py  __main__.py  _patches.py  cli.py  convert.py  ocr.py  rmapi.py  wizard.py
