[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mistral-ocr-cli"
version = "0.1.0"
description = "CLI to convert PDFs to Markdown using the Mistral OCR API."
requires-python = ">=3.9"
dependencies = [
    "mistralai>=1.5.0",
    "python-dotenv>=1.0.0",
    "datauri>=1.0.0",
]

[project.scripts]
ocr = "mistral_ocr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
