[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rm2md"
version = "0.0.2"
description = "Download reMarkable notebooks and convert them to Markdown via Mistral OCR."
requires-python = ">=3.9"
dependencies = [
    "mistralai>=1.5.0",
    "python-dotenv>=1.0.0",
    "datauri>=1.0.0",
    "questionary>=2.0.0",
    "rmc>=0.3.0",
    "pypdf>=4.0.0",
    "cairosvg>=2.7.0",
]

[project.scripts]
rm2md = "rm2md.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
